--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "youtube-node": "latest",
     "serve-favicon" : "latest",
     "wedeploy-middleware" : "latest",
-    "wedeploy" : "latest"
+    "wedeploy" : "latest",
+    "http" : "latest"
   }
 }
