--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,8 +12,6 @@
     "youtube-node": "latest",
     "serve-favicon" : "latest",
     "wedeploy-middleware" : "latest",
-    "wedeploy" : "latest",
-    "node-rest-client" : "latest",
-    "http" : "latest"
+    "wedeploy" : "latest"
   }
 }
