--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "boilerplate-nodejs",
+  "version": "1.0.0",
   "description": "A boilerplate that demonstrates the Node.js container",
   "main": "index.js",
   "scripts": {
