--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-nodejs",
+  "name": "nodejs",
   "version": "1.0.0",
   "description": "A boilerplate that demonstrates the Node.js container",
   "main": "index.js",
